hw9-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw9-api-app
  name: otus-hw9-api-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw9-api-app
    template:
       metadata:
          labels:
             app: otus-hw9-api-app
       spec:
          containers:
          - name: otus-hw9-api
            image: evgen2sat/otus-hw9-api:1.0.1
            ports:
              - name: web 
                containerPort: 8003
            livenessProbe:
              httpGet:
                port: 8003
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8003
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
