hw9-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otus-hw9-api-app
  name: otus-hw9-api-service
spec:
  selector:
    app: otus-hw9-api-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web 
      name: web
  type: NodePort
